# freecell

./: .gitignore  README.md  flake.nix  pyproject.toml  result  setup.py  shell.nix
src/core/: card.py  table.py
tests/core/: test_card.py  test_game.py  test_table.py
tests/ui/: test_game_controller.py
